# HorizonXServer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Tiltfile  docker-compose.yml  init_db.bat  init_db.sh  install_latest.bat  install_latest.sh  output_file.txt  pyproject.toml
Docker/: docker-compose.dev.yml  docker-compose.prod.yml
envs/: .env.development  .env.production
migrations/: env.py
migrations/versions/: 74851e15e08f_db_init.py  8a1a9e987880_auto_generated_migration.py  b3d90c29db37_db_initialise.py  df124a7ab0bf_created_route_component_and_user_.py  f08d4c8bb18c_db_init.py
pgadmin/: pgpass  servers.json
scripts/: create_superuser.py  start.sh
src/app/: main.py  setup.py
src/app/api/: __init__.py  deps.py  router.py
src/app/api/v1/: __init__.py  router.py
src/app/api/v1/endpoints/: __init__.py  auth.py  posts.py  rbac.py  route.py  sidebar.py  users.py
src/app/models/: __init__.py  permission.py  post.py  role.py  route.py  user.py
src/app/schemas/: __init__.py  auth.py  permission.py  post.py  role.py  sidebar.py  user.py
src/app/services/: __init__.py  auth.py  base.py  permission.py  post.py  role.py  route.py  sidebar.py  user.py
src/core/: __init__.py  config.py  security.py
src/core/cache/: client.py  utils.py
src/core/db/: __init__.py  base.py  session.py
src/core/err/: __init__.py  handlers.py  models.py
src/core/log/: __init__.py  config.py
src/core/middleware/: __init__.py  cors.py  logging.py
src/core/utils/: __init__.py  rate_limit.py
src/settings/: run.py
tests/: conftest.py
tests/test_api/test_v1/: test_root.py
